@@ -319,14 +319,18 @@ define command {
        NOTIFY_HOSTALIAS='$HOSTALIAS$' \
        NOTIFY_HOSTADDRESS='$HOSTADDRESS$' \
        NOTIFY_LASTHOSTSTATE='$LASTHOSTSTATE$' \
+       NOTIFY_LASTHOSTSTATECHANGE='$LASTHOSTSTATECHANGE$' \
        NOTIFY_HOSTSTATE='$HOSTSTATE$' \
+       NOTIFY_HOSTSTATEID='$HOSTSTATEID$' \
        NOTIFY_HOSTCHECKCOMMAND='$HOSTCHECKCOMMAND$' \
        NOTIFY_HOSTOUTPUT='$HOSTOUTPUT$' \
        NOTIFY_HOSTPERFDATA='$HOSTPERFDATA$' \
        NOTIFY_LONGHOSTOUTPUT='$LONGHOSTOUTPUT$' \
        NOTIFY_SERVICEDESC='$SERVICEDESC$' \
        NOTIFY_LASTSERVICESTATE='$LASTSERVICESTATE$' \
+       NOTIFY_LASTSERVICESTATECHANGE='$LASTSERVICESTATECHANGE$' \
        NOTIFY_SERVICESTATE='$SERVICESTATE$' \
+       NOTIFY_SERVICESTATEID='$SERVICESTATEID$' \
        NOTIFY_SERVICEOUTPUT='$SERVICEOUTPUT$' \
        NOTIFY_LONGSERVICEOUTPUT='$LONGSERVICEOUTPUT$' \
        NOTIFY_SERVICEPERFDATA='$SERVICEPERFDATA$' \
